# sms-backend

./: Cargo.toml
config/: worker.toml
sms-api/: Cargo.toml  TODO.md
sms-api/src/: error.rs  handler.rs  lib.rs  main.rs  rejection.rs  state.rs
sms-api/src/auth/: extractor.rs  guard.rs  jwt.rs  mod.rs  permissions.rs  roles.rs
sms-api/src/cli/: create_user.rs  generate_app_key.rs  mod.rs
sms-api/src/extractors/: mod.rs  utils.rs  validated_json.rs
sms-api/src/requests/: mod.rs  sms_request.rs
sms-api/src/router/: mod.rs  routes.rs
sms-core/: Cargo.toml  TODO.md
sms-core/src/: lib.rs
sms-core/src/error/: mod.rs
sms-core/src/models/: job.rs  mod.rs  sms.rs  submission.rs
sms-deadletter/: Cargo.toml  TODO.md
sms-deadletter/src/: lib.rs  main.rs  redis.rs
sms-deadletter/src/commands/: delete.rs  export.rs  list.rs  mod.rs  requeue.rs  view.rs
sms-worker/: Cargo.toml  TODO.md
sms-worker/src/: config.rs  delayed_processor.rs  job_processor.rs  lib.rs  main.rs  worker.rs
