[workspace]
resolver = "3"
members = [
	"sms-core",
	"sms-api",
	"sms-worker"
]
[workspace.dependencies]
redis = { version = "0.32.3", features = ["aio", "tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
dotenvy = "0.15.7"
