[workspace]
resolver = "3"
members = [
	"sms-core",
	"sms-api",
	"sms-worker",
	"sms-deadletter"
]

[workspace.dependencies]
axum = "0.8.4"
anyhow = "1.0.98"
thiserror = "2.0.12"
redis = { version = "0.32.3", features = ["aio", "tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
toml = "0.9.1"
rand = "0.9.1"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
