[package]
name = "sms-api"
version = "0.1.0"
edition = "2024"

[dependencies]
sms-core = { version = "0.1.0", path = "../sms-core" }
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
tokio.workspace = true
serde_json.workspace = true
redis.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
jsonwebtoken.workspace = true
futures.workspace = true
validator.workspace = true
clap.workspace = true
chrono.workspace = true
rand.workspace = true
hex.workspace = true
