[package]
name = "sms-core"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
redis.workspace = true
uuid.workspace = true
chrono.workspace = true
validator.workspace = true
