[package]
name = "sms-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
redis.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
sms-core = { path = "../sms-core" }

